# ML-Trading-Dashboard

./: .gitignore  AGENTS.md  AUDIT-analytics-timestamp-bug.md  CLAUDE.md  LICENSE  PROJECT_VIABILITY_REVIEW_2026-03-28.md  README.md  docker-compose.yml
backend/: .env.production  Dockerfile  pyproject.toml  run_prediction_analytics.py  run_strategy_comparison.py  run_tp_sl_sweep.py
backend/analytics_results/: 20260328_225724_prediction_analytics_detailed.csv  20260328_225724_prediction_analytics_summary.csv  20260329_102239_prediction_analytics_detailed.csv  20260329_102239_prediction_analytics_summary.csv  20260330_000337_prediction_analytics_detailed.csv  20260330_000337_prediction_analytics_summary.csv  20260330_013404_prediction_analytics_detailed.csv  20260330_013404_prediction_analytics_summary.csv  small.py
backend/tests/dashboard/: conftest.py  test_api_verification.py  test_integration_pipeline.py  test_run_prediction_analytics.py  test_strategy_comparison_tracking.py
backend/tests/dashboard/api/: conftest.py  test_disabled_levels_state.py  test_level_serialization.py  test_routes_accounts.py  test_routes_config.py  test_routes_data.py  test_routes_levels.py  test_routes_trading.py  test_websocket.py
backend/tests/dashboard/db/: test_connection.py  test_models.py
backend/tests/dashboard/engine/: test_cme_day_boundary.py  test_feature_computer.py  test_feature_parity.py  test_level_engine.py  test_observation_manager.py  test_touch_detector.py
backend/tests/dashboard/model/: conftest.py  test_model_manager.py  test_outcome_tracker.py  (+1 more)
(+79 files in other folders)
