[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-dashboard"
version = "0.1.0"
description = "Live NQ futures trading dashboard — FastAPI backend + pipeline"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "duckdb>=1.0",
    "python-dotenv>=1.0",
    "async-rithmic>=1.5.7",
    "databento>=0.40",
    "catboost>=1.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-multipart>=0.0.5",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "httpx>=0.24",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
